log/build_2025-11-08_20-21-15/command_nodes/stdout_stderr.log
running egg_info
creating ../../build/command_nodes/command_nodes.egg-info
writing ../../build/command_nodes/command_nodes.egg-info/PKG-INFO
writing dependency_links to ../../build/command_nodes/command_nodes.egg-info/dependency_links.txt
writing entry points to ../../build/command_nodes/command_nodes.egg-info/entry_points.txt
writing requirements to ../../build/command_nodes/command_nodes.egg-info/requires.txt
writing top-level names to ../../build/command_nodes/command_nodes.egg-info/top_level.txt
writing manifest file '../../build/command_nodes/command_nodes.egg-info/SOURCES.txt'
reading manifest file '../../build/command_nodes/command_nodes.egg-info/SOURCES.txt'
writing manifest file '../../build/command_nodes/command_nodes.egg-info/SOURCES.txt'
running build
running build_py
creating /root/Autonomous-Delivery-Robot-ROS2/build/command_nodes/build
creating /root/Autonomous-Delivery-Robot-ROS2/build/command_nodes/build/lib
creating /root/Autonomous-Delivery-Robot-ROS2/build/command_nodes/build/lib/command_nodes
copying command_nodes/__init__.py -> /root/Autonomous-Delivery-Robot-ROS2/build/command_nodes/build/lib/command_nodes
copying command_nodes/command_handler.py -> /root/Autonomous-Delivery-Robot-ROS2/build/command_nodes/build/lib/command_nodes
running install
running install_lib
creating /root/Autonomous-Delivery-Robot-ROS2/install/command_nodes/lib/python3.10/site-packages/command_nodes
copying /root/Autonomous-Delivery-Robot-ROS2/build/command_nodes/build/lib/command_nodes/__init__.py -> /root/Autonomous-Delivery-Robot-ROS2/install/command_nodes/lib/python3.10/site-packages/command_nodes
copying /root/Autonomous-Delivery-Robot-ROS2/build/command_nodes/build/lib/command_nodes/command_handler.py -> /root/Autonomous-Delivery-Robot-ROS2/install/command_nodes/lib/python3.10/site-packages/command_nodes
byte-compiling /root/Autonomous-Delivery-Robot-ROS2/install/command_nodes/lib/python3.10/site-packages/command_nodes/__init__.py to __init__.cpython-310.pyc
byte-compiling /root/Autonomous-Delivery-Robot-ROS2/install/command_nodes/lib/python3.10/site-packages/command_nodes/command_handler.py to command_handler.cpython-310.pyc
running install_data
  File "/root/Autonomous-Delivery-Robot-ROS2/install/command_nodes/lib/python3.10/site-packages/command_nodes/command_handler.py", line 11
    }
    ^
SyntaxError: invalid syntax

creating /root/Autonomous-Delivery-Robot-ROS2/install/command_nodes/share/ament_index
creating /root/Autonomous-Delivery-Robot-ROS2/install/command_nodes/share/ament_index/resource_index
creating /root/Autonomous-Delivery-Robot-ROS2/install/command_nodes/share/ament_index/resource_index/packages
copying resource/command_nodes -> /root/Autonomous-Delivery-Robot-ROS2/install/command_nodes/share/ament_index/resource_index/packages
copying package.xml -> /root/Autonomous-Delivery-Robot-ROS2/install/command_nodes/share/command_nodes
running install_egg_info
Copying ../../build/command_nodes/command_nodes.egg-info to /root/Autonomous-Delivery-Robot-ROS2/install/command_nodes/lib/python3.10/site-packages/command_nodes-0.0.0-py3.10.egg-info
running install_scripts
Installing command_handler script to /root/Autonomous-Delivery-Robot-ROS2/install/command_nodes/lib/command_nodes
writing list of installed files to '/root/Autonomous-Delivery-Robot-ROS2/build/command_nodes/install.log'
